--- a/findfind/templates/accounts/done.html
+++ b/findfind/templates/accounts/done.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-	<h2>We are Happy you shared your Contact with Us!</h2>
+	<h2 class="lead">We are Happy you shared your Contact with Us!</h2>
 
 	{% for form in form_data %}
 		{{ form }}
