--- a/findfind/templates/accounts/loggedin.html
+++ b/findfind/templates/accounts/loggedin.html
@@ -2,12 +2,13 @@
 
 
 {% block content %}
-	<h2> Hi, {{firstname}} {{surname}} You're Now logged in!</h2>
+	<h1> Hi, {{firstname}} {{surname}} You're Now logged in!</h1>
 	<h3>Please Don't forget your username: "{{username}}", and your password to continue surfing this website. </h3>
 	<h3>Is >>> {{email}} <<< your correct e-mail address?<br> If not kindly let us know. <br>Thank you </h3>
 
 	<p></p>
 	<p> Click <a href="{% url 'logout' %}">Here</a> to logout.</p>
+	<p> Click <a href="{% url 'workers_list' %}">Here</a> Too to check out the main site</p>
 	<br>
 	<p>Click <a href="{% url 'user_profile' %}"> Here </a> To edit your profile Informations</p>
 
