--- a/findfind/templates/accounts/login.html
+++ b/findfind/templates/accounts/login.html
@@ -1,22 +1,38 @@
 {% extends "base.html" %}
 
 
-{% block content %}
 
-	{% if form.errors %}
-		<p class="error"> Sorry, that's not a valid username or password </p>
-	{% endif %}
+		
+				
+				{% block content %}
+				<div class="container">
+				   <div class="row">
+					 <div class="col-md-12 ">
+					<h1 class="text-info text-center">Input your Credentials to Proceed</h1>
 
-	<form action="/accounts/auth/" method="post">{% csrf_token %}
-	
-	<label for="username"> User name: </label>
-	<input type="text" name="username" value="" id="username">
-	<label for="password"> Password: </label>
-	<input type="password" name="password" value="" id="password">
-	<p></p>
-	<input type="submit" value="login">
+					{% if form.errors %}
+						<p class="error"> Sorry, that's not a valid username or password </p>
+					{% endif %}
+					
+					<form action="/accounts/auth/" method="post" >{% csrf_token %}
+					
+					<label for="username"> User name: </label>
+					<input type="text" name="username" value="" id="username">
+					<label for="password"> Password: </label>
+					<input type="password" name="password" value="" id="password">
+					<p></p><div class="container"><div class="row"><div class="col-md-8 col-md-offset-4">
+					<input type="submit" value="login" class="btn btn-info btn-lg" > <input type="reset" value="cancel" class="btn btn-danger btn-lg" >
+					</div></div></div>
+					<p></p>
+					<p class="lead">Are you new on this Platform?</p>
+					<a href="{% url 'register_user' %}"><span class="h1">Sign Up Here</span></a>
 
+					<span class="glyphicons glyphicons-bus"> </span>
 
-	</form>
+					</form>
+				  </div></div></div>	
+	{% endblock %}
+		
 
-{% endblock %}
+	</div>
+</div>
