--- a/findfind/templates/base.html
+++ b/findfind/templates/base.html
@@ -2,28 +2,152 @@
 {% load bootstrap3 %}
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>FindFind</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+	<meta http-equiv="X-UA-Compactible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
+	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	
 </head>
 <body>
-	{% block sidebar %}
+{% block navigation %}
+	<div class="container">
+		<div class="row"> <div class="col-sm-6 cols-sm-offset-2">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	  <a class="navbar-brand" href="#">Navbar</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <ul class="navbar-nav mr-auto">
+	      <li class="nav-item active">
+	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Link</a>
+	      </li>
+	      <li class="nav-item dropdown">
+	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	          Dropdown
+	        </a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	          <a class="dropdown-item" href="#">Action</a>
+	          <a class="dropdown-item" href="#">Another action</a>
+	          <div class="dropdown-divider"></div>
+	          <a class="dropdown-item" href="#">Something else here</a>
+	        </div>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link disabled" href="#">Disabled</a>
+	      </li>
+	    </ul>
+	    <form class="form-inline my-2 my-lg-0">
+	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+	      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+	    </form>
+	  </div>
+	</nav>
+	</div>
+	</div>
+	</div>
+{% endblock navigation %}
+
+
+
+
+<div class="container">
+	<div class="row">
+		<section class="col-sm-4">
+			{% block sidebar %}
+
+				<h1>Checking something</h1>
+
+			{% endblock sidebar %}	
+		</section>
+
+
+		<section class="col-sm-8">
+			{% block content %}
+				
+			<h1>Checking something content//!!!</h1>
+
+
+			{% endblock content %}	
+		</section>
 	
 
-	{% endblock sidebar %}
 
-	{% block content %}
+
+	</div>
+</div>
+
+
+	{% block footer %}
+		<footer id="the_footer">
+					<div class="social_media container">
+					<h2>Join our Social Media Platforms Today!</h2>
+						
+						<div class="row ">		
+			
+				
+							
+							
+								<div class="col-3 col-sm-3">
+									<a href="#"><img class="icon" src="{% static 'img/mainFooter_smf.png' %}" width="50px"></a>
+									
+									
+								</div>
+									<div class="clearfix" ></div>
+								<div class="col-3 col-sm-3">
+									<a href="#"><img class="icon" src="{% static 'img/mainFooter_smg.png' %}" width="50px"></a>
+									
+									
+								</div >
+								<div class="clearfix" ></div>
+								<div class="col-3 col-sm-3">
+									<a href="#"><img class="icon"  src="{% static 'img/mainFooter_smi.png' %}" width="50px"></a>
+									
+								</div>
+								
+								<div class="col-3 col-sm-3" >
+									<a href="#"><img class="icon" src="{% static 'img/mainFooter_smt.png' %}" width="50px"></a>
+
+								
+									
+								</div>
+								<section class="col-sm-8 offset-sm-2">
+									<h3>© 2018 CDM7 Studios™</h3>
+								</section>
+
+						
+				
+			
+
+						</div> <!--footer-->
+				</div>
+			</footer>
+	{% endblock footer %}
+
+
+
+
+	<div class="container-fluid"> <div class="row"><div class="col-8 col-md-10 col-offset-1">
+	<img src="{% static 'img/a.jpg' %}" alt="logo" width="250px" align="center" class="img-responsive img-thumbnail">
+	</div></div></div>
 	
-	{% endblock content %}
-	<img src="{% static 'images/a.jpg' %}" alt="logo" width="250px" align="center">
-
 	<script src="{% static 'js/jquery-3.2.1.min.js' %}" ></script>
-	<script src="{% static 'js/bootstrap.min.js' %}" ></script>
+
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 	<script src="{% static 'js/script.js' %}" ></script>
 	<script src="{% static 'js/ajax.js' %}" ></script>
+	
+	
 </body>
 </html>
