--- a/findfind/templates/worker/ajax_search.html
+++ b/findfind/templates/worker/ajax_search.html
@@ -7,7 +7,7 @@
 {% for worker in workers %}
 
 
-<p class="lead"><a href="{{ worker.object.get_absolute_url }}" > {{ worker.object.first_name|capfirst }} {{ worker.object.last_name|capfirst }}  ||  {{ worker.object.City_or_Town|capfirst }} || {{ worker.object.Main_job_description|capfirst }} || {{ worker.object.Region|capfirst }} || </a></p>
+<p class="lead"><a href="{{ worker.object.get_absolute_url }}/" > {{ worker.object.first_name|capfirst }} {{ worker.object.last_name|capfirst }}  ||  {{ worker.object.City_or_Town|capfirst }} || {{ worker.object.Main_job_description|capfirst }} || {{ worker.object.Region|capfirst }} || </a></p>
 {% endfor %}
 
 
