--- a/findfind/templates/worker/worker_details.html
+++ b/findfind/templates/worker/worker_details.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
-
+ {% block navigation %}
+ {% endblock %}
 
 
  {% block sidebar %}
@@ -30,40 +31,67 @@
 
 	{% if worker.profile_Picture %}
 
-	<p><img src="{{ MEDIA_URL }}{{ worker.profile_Picture }}"   alt="Default Profile Picture" width="200"></p>
+	<p><a href="{{ MEDIA_URL }}{{ worker.profile_Picture }}">
+		<img src="{{ MEDIA_URL }}{{ worker.profile_Picture }}"   alt="Default Profile Picture" width="200" height="200px" class="img-rounded img-responsive pull-left">
+	</a></p>
 
 	{% endif %}
 
-	<h3 class="lead">Name: {{ worker.first_name }} {{ worker.last_name }}</h3>
-	<h4 class="lead">Age: {{ worker.age }}</h4>
-	<h4 class="lead">Gender: {{ worker.gender }}</h4>
-	<h4 class="lead">Contact: {{ worker.Call_Number }}</h4>
+	<h1 class="lead">Name: {{ worker.first_name }} {{ worker.last_name }}</h3>
+	<h1 class="lead">Age: {{ worker.age }}</h4>
+	<h1 class="lead">Gender: {{ worker.gender }}</h4>
+	<h1 class="lead">Contact: {{ worker.Call_Number }}</h4>
 	{% if worker.WhatsApp %}
-	<h4 class="lead">WhatsApp: {{ worker.WhatsApp }}</h4>
+	<h1 class="lead">WhatsApp: {{ worker.WhatsApp }}</h4>
 	{% endif %}
-	<h4 class="lead">Main Job Description: {{ worker.Main_job_description }}</h4>
+	<h1 class="lead bold">Main Job Description: {{ worker.Main_job_description }}</h4>
 	{% if worker.Other_jobs_description %}
-	<h4 class="lead">Other Job Descriptions: {{ worker.Other_jobs_description }}</h4>
+	<h1 class="lead">Other Job Descriptions: {{ worker.Other_jobs_description }}</h4>
 	{% endif %}
-	<h4 class="lead">Region: {{ worker.Region }}</h4>
-	<h4 class="lead">City: {{ worker.City_or_Town }}</h4>
-	<h4 class="lead">About Me: {{ worker.bio|truncatewords:"4" }}</h4>
+	<h1 class="lead">Region: {{ worker.Region }}</h4>
+	<h1 class="lead">City: {{ worker.City_or_Town }}</h4>
+	<h1 class="lead">About Me: {{ worker.bio }}</h4>
 	
-	<h4 class="lead">Joined on: {{ worker.date_joined|date:"D d M Y" }}</h4>
+	<h1 class="lead">Joined on: {{ worker.date_joined|date:"D d M Y" }}</h4>
 	
 
 
-	<h3 class="lead">{{ worker.likes }} pe{{ worker.likes|pluralize:"rson,ople" }} liked this</h3>
+	<h1 class="lead">{{ worker.likes }} pe{{ worker.likes|pluralize:"rson,ople" }} liked this</h3>
 
-	<p><a href="{% url 'worker_likes' worker.id %}"  class="btn btn-info">like</a></p>
+	<p><a href="{% url 'worker_like' worker.id %}"  class="btn btn-info">like</a> || <a href="{% url 'worker_unlike' worker.id %}"  class="btn btn-danger" id="like_button">unlike</a></p>
+
+	<p><a href="{% url 'worker_proof_page' worker.id %}" class="btn btn-info">Click here to Open the Proof Page.</a></p>
+	
+
+	
+	
+
+	
+
+
+
+			
 
 	<h2 class="lead"> Comments </h2>
 
 	{% for c in worker.comment_set.all %}
-	<p class="lead"> {{ c.name }} => {{ c.message }}</p>
+	<p class="lead"> {{ c.name }} => {{ c.message }}
+	
+	<a href="{% url 'worker_delete_comment' c.id %}" class="btn btn-danger btn-lg" > Delete</a>
+	
+	
+
+
+
+	</p>
 	{% endfor %}
 
-	<p class="lead"><a href="{% url 'worker_add_comment' worker.id %}" class="btn btn-success btn-lg"> Add Comment ! </a></p>
+	<p class="lead"><a href="{% url 'worker_add_comment' worker.id %}" class="btn btn-success btn-lg"> Add Comment !</a> </p>
+
+	<p><a href="{% url 'worker_add_proof' worker.id %}" class="btn btn-success btn-lg"> Add A Proof of Work</a>
+		
+	</p>
+
 
 
 {% endblock %}
