--- a/findfind/templates/worker/workers_list.html
+++ b/findfind/templates/worker/workers_list.html
@@ -44,19 +44,21 @@
 	
 
 	<h3 class="lead">Workers On This Platform</h3>
-	<div>
+	<div class="section">
+	  <div class="row">
 		{% for worker in workers %}
-		<p>
+		<p><div class="col-md-4">
 			<a href="{% url 'worker_details' worker.id %}">
-				<p class="lead">{{ worker.first_name|capfirst }} {{ worker.last_name|capfirst }}</p>
 				{% if worker.profile_Picture %}
-					<p><img src="{{ MEDIA_URL }}{{ worker.profile_Picture }}"   alt="Default Profile Picture" width="100"></p>
+					<p><img src="{{ MEDIA_URL }}{{ worker.profile_Picture }}"   alt="Default Profile Picture" width="100" class="img-rounded img-responsive"></p>
+					<p class="lead">{{ worker.first_name|capfirst }} {{ worker.last_name|capfirst }} : {{ worker.Main_job_description|capfirst }}  </p>
 				{% endif %}
 				
 			</a>
 			<p>{{ worker.likes }} pe{{ worker.likes|pluralize:"rson,ople" }} liked this</p>
-		</p>
+		</p></div>
 		{% endfor %}
+		</div></div>
 	</div>
 	
 {% endblock %}
